# MyCV

./: .gitignore  manage.py  package-lock.json  package.json  populate_db.py  pyproject.toml  requirements.txt  run.sh  tsconfig.json
my_webpage_project/: asgi.py  settings.py  urls.py  wsgi.py
resume/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
resume/migrations/: 0001_initial.py  0002_skill_superskill.py  0003_superskill_alter_skill_superskill.py  0004_alter_superskill_level.py  0005_education.py  0006_education_year_end_education_year_start.py  0007_remove_education_period.py  0008_alter_education_year_start.py  0009_remove_education_year_end_and_more.py  0010_education_year_end_education_year_start.py  0011_work.py
resume/py_scripts/: secret_santa.py
resume/templatetags/: template_tags.py
static/js/: ajax.js  ajax.js.map  floating-gifts.js
static/styles/css/: santa.css  styles.css
static/styles/scss/: _base.scss  _buttons.scss  _cards.scss  _decorators.scss  _email.scss  _font.scss  _footer.scss  _navbar.scss  _santa.scss  _title_bar.scss  _variables.scss  styles.scss
static/ts/: ajax.ts
templates/resume/: about-tag.html  about.html  base.html  education-tag.html  education.html  email-tag.html  email.html  index.html  music-tag.html  music.html  secret-santa.html  skills-tag.html  skills.html  subskills.html  work-tag.html  work.html
